<resources>
    <string name="app_name">Online Shop</string>
    <string name="detail">Details</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="make_order">Make Order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="comment">Comment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="online_shop">Online Shop</string>
    <string name="telefon">Phone</string>
    <string name="language_selection">Language selection</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="pochtangizni_qo_shing">Add your email</string>
    <string name="new_gmail">New email</string>
    <string name="email_is_not">Email is not attached</string>
    <string name="email_name">Email name</string>
    <string name="confirm_address">confirm address</string>
    <string name="categories">Categories</string>
    <string name="see_all_products">See all products</string>
    <string name="save">Save</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_txt">  Your internet connection is currently not available please check</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="uzbek">O\'zbek tili</string>
    <string name="english">English language</string>

</resources>