<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="10dp">

                <ImageView
                    android:background="@drawable/item_click_back"
                    android:id="@+id/arrow_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:paddingLeft="4dp"
                    android:src="@drawable/ic_arrow_back" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/bradlefens"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="10dp">

                <ImageView
                    android:background="@drawable/item_click_back"
                    android:id="@+id/favorite"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_heart_1" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:src="@drawable/user2" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/insomniaregular"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="@string/app_name" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/bradlefens"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:text="@string/app_name">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginRight="16dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/bradlefens"
                android:padding="12dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>